# ulibc

./: CMakeLists.txt
include/: ctype.h
platform/: CMakeLists.txt  platform-variables.cmake
platform/start/: CMakeLists.txt
platform/start/linux-x64/: CMakeLists.txt  crt.s
platform/x64/: CMakeLists.txt
platform/x64/linux/: CMakeLists.txt
src/: ctype.cpp
test/: CMakeLists.txt
test/test-ctype/: CMakeLists.txt
test/test-ctype/src/: main.c
